tests/ui/rpc/fail/function_no_self.stderr
error: zod: `namespace methods must have a self argument`
 --> tests/ui/rpc/fail/function_no_self.rs:8:14
  |
8 |     async fn test() {}
  |              ^^^^
